--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "~5.5.0",
         "prettus/l5-repository": "^2.6",
+        "unisharp/laravel-ckeditor": "^4.7",
         "watson/active": "^3.0"
     },
     "require-dev": {
