termino separação website

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,9 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 FILESYSTEM_DRIVER=upload_local
 IMAGE_NOT_FOUND=placeholder-image.png
+
+SESSION_COOKIE=sinprosp_admin
+
+PATH_STORAGE_UPLOAD=
+
+APP_URL_SITE_VER_NOTICIA=localhost:3000/noticias/
