--- a/.env.example
+++ b/.env.example
@@ -46,3 +46,7 @@ SESSION_COOKIE=sinprosp_admin
 PATH_STORAGE_UPLOAD=
 
 APP_URL_SITE_VER_NOTICIA=localhost:3000/noticias/
+
+API_PREFIX=api
+
+JWT_SECRET=
