--- a/composer.json
+++ b/composer.json
@@ -6,14 +6,17 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "barryvdh/laravel-cors": "^0.11.2",
         "barryvdh/laravel-ide-helper": "^2.5",
         "caouecs/laravel-lang": "~3.0",
+        "dingo/api": "2.0.0-alpha1",
         "fideloper/proxy": "^4.0",
         "folklore/image": "0.3.16",
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.5.0",
         "prettus/l5-repository": "^2.6",
+        "tymon/jwt-auth": "dev-develop#9f759fe9e3112e1de50920c05537d752780cf966",
         "unisharp/laravel-ckeditor": "^4.7",
         "watson/active": "^3.0"
     },
