--- a/.env.example
+++ b/.env.example
@@ -45,8 +45,8 @@ SESSION_COOKIE=sinprosp_admin
 
 PATH_STORAGE_UPLOAD=
 
-APP_URL_SITE_VER_NOTICIA=localhost:3000/noticias/
+APP_URL_SITE_VER_NOTICIA=http://localhost:3000/noticias/
 
 API_PREFIX=api
-
 JWT_SECRET=
+JWT_BLACKLIST_GRACE_PERIOD=6000
