--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,9 @@
         "laravel/framework": "5.6.*",
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "~5.5.0",
+        "league/fractal": "^0.17.0",
         "prettus/l5-repository": "^2.6",
-        "tymon/jwt-auth": "dev-develop#9f759fe9e3112e1de50920c05537d752780cf966",
+        "tymon/jwt-auth": "dev-develop",
         "unisharp/laravel-ckeditor": "^4.7",
         "watson/active": "^3.0"
     },
@@ -34,7 +35,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Helpers/helpers.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
