--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-template-compiler": "^2.5.22"
   },
   "dependencies": {
+    "bs-custom-file-input": "^1.3.1",
     "font-awesome": "^4.7.0"
   }
 }
