Implementado loggin user e sistema;
spatie/laravel-activitylog
https://docs.spatie.be/laravel-activitylog/v2/introduction
https://github.com/spatie/laravel-activitylog
composer require spatie/laravel-activitylog
php artisan vendor:publish --provider="Spatie\Activitylog\ActivitylogServiceProvider" --tag="migrations"

Laravel Authentication Log
https://github.com/yadahan/laravel-authentication-log
composer require yadahan/laravel-authentication-log
php artisan vendor:publish --provider="Yadahan\AuthenticationLog\AuthenticationLogServiceProvider"

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,4 @@
 {
     "/js/admin.js": "/js/admin.js",
-    "/css/admin.css": "/css/admin.css",
-    "/js/bs-custom-file-input.js": "/js/bs-custom-file-input.js"
+    "/css/admin.css": "/css/admin.css"
 }
