--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,11 @@
         "laravelcollective/html": "~5.5.0",
         "league/fractal": "^0.17.0",
         "prettus/l5-repository": "^2.6",
+        "spatie/laravel-activitylog": "^3.2",
         "tymon/jwt-auth": "dev-develop",
         "unisharp/laravel-ckeditor": "^4.7",
-        "watson/active": "^3.0"
+        "watson/active": "^3.0",
+        "yadahan/laravel-authentication-log": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
