Refatorado todos controllers para toast; Criado Policy para os modules slider, noticias categorias, ordem noticias e clausulas;

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,11 @@ DB_DATABASE=sinprosp_website_admin
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
+DB_CONNECTION=sqlsrv-site
+DB_CONNECTION=sqlsrv-website
+DB_CONNECTION=sqlsrv-sinpro
+DB_CONNECTION=pgsql
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 SESSION_DRIVER=file
