Correções form home page Pagina preview home page

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,5 +1,6 @@
 {
     "/js/admin.js": "/js/admin.js",
     "/css/admin.css": "/css/admin.css",
-    "/css/drag-drop.css": "/css/drag-drop.css"
+    "/css/drag-drop.css": "/css/drag-drop.css",
+    "/css/website.css": "/css/website.css"
 }
