--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-free": "^5.11.2",
     "axios": "^0.18.1",
     "bootstrap": ">=4.3.1",
     "browser-sync": "^2.26.7",
@@ -27,6 +28,6 @@
   },
   "dependencies": {
     "bs-custom-file-input": "^1.3.1",
-    "font-awesome": "^4.7.0"
+    "owl.carousel": "^2.3.4"
   }
 }
