--- a/.env.example
+++ b/.env.example
@@ -52,7 +52,8 @@ SESSION_COOKIE=sinprosp_admin
 
 PATH_STORAGE_UPLOAD=
 
-APP_URL_SITE_VER_NOTICIA=http://localhost:3000/noticias/
+APP_URL_SITE_VER_NOTICIA=http://website.br/noticias/
+APP_URL_SITE_VER_OCULTA=http://website.br/oculta/
 
 API_PREFIX=api
 JWT_SECRET=
