--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.2",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
